# SnapTop

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  MIGRATION.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
backend/: Dockerfile  README.md
backend/src/agents/: nutritionist_agent.py  recipe_agent.py
backend/src/common/: auth_utils.py  img_generation_models.py  llms.py  utils.py
backend/src/langgraph_tools/: generate_recipe_image.py  nutrition.py  recipe_search.py
backend/src/models/: __init__.py  auth.py  meal_plan.py  recipe.py  requests.py  shopping.py  user.py
backend/src/server/: fastapi_server.py  grpc_server.py
backend/src/tests/integration/src/common/: llm_integration_test.py
backend/src/tests/integration/src/langgraph_tools/: get_nutrition_integration_test.py  recipe_search_integration_test.py
backend/src/tests/integration/src/server/: test_generate_recipe.py
bigquery/: agent_logs.sql  create_bigquery_tables.py  meal_plans.sql  recipes.sql  users.sql
frontend/: .dockerignore  .env.example  Dockerfile.envoy  README.md  envoy.yaml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  Header.tsx  Home.tsx  Login.tsx  RecipeDisplay.tsx  RecipeForm.tsx  RecipeGenerator.tsx  grpcClient.ts  types.ts
proto/: meal_plan.proto  mealprep_service.proto  recipe.proto  shopping.proto  user.proto
src/agents/: nutritionist_agent.py  recipe_agent.py
src/common/: llms.py  utils.py
src/data/: pull_recipes.py
src/langgraph_tools/: gcp_secrets.py  get_nutrition.py  google_search.py  nutrition.py  recipe_search.py
src/server/: grpc_server.py
tests/integration/src/common/: llm_integration_test.py
tests/integration/src/langgraph_tools/: get_nutrition_integration_test.py  recipe_search_integration_test.py
tests/integration/src/server/: test_generate_recipe.py
