[project]
requires-python = ">=3.12"
name = "snaptop-mealprep"
version = "0.1.0"
description = "Agentic meal planning system using LangGraph, gRPC, and BigQuery"
authors = ["leosneat@gmail.com"]
dependencies = [
	"protobuf>=5.0.0",
	"google-cloud-bigquery>=3.20.0",
	"langchain_core",
	"langgraph",
	"langchain",
	"jsonpatch",
	"six",
	"google-cloud-secret-manager>=2.25.0",
	"langchain-google-community>=3.0.0",
	"langchain-community>=0.4.1",
	"bs4>=0.0.2",
	"langchain-google-vertexai>=3.0.2",
	"google-cloud-storage>=2.19.0",
	"google-generativeai>=0.8.5",
]

[tool.uv]
