[project]
requires-python = ">=3.12"
name = "snaptop-mealprep"
version = "0.1.0"
description = "Agentic meal planning system using LangGraph, gRPC, and BigQuery"
authors = ["leosneat@gmail.com"]
dependencies = [
	"protobuf>=5.0.0",
	"google-cloud-bigquery>=3.20.0",
	"langchain_core",
	"langchain",
	"google-cloud-secret-manager>=2.25.0",
	"langchain-google-community>=3.0.0",
	"langchain-community>=0.4.1",
	"langchain-google-vertexai>=3.0.2",
	"google-generativeai>=0.8.5",
	"pytest>=9.0.0",
	"ruff>=0.14.4",
	"datamodel-code-generator>=0.35.0",
	"protobuf-to-pydantic>=0.3.3.1",
	"grpcio>=1.76.0",
	"grpcio-tools>=1.71.2",
	"mypy-protobuf>=3.6.0",
]

[tool.uv]

# pyproject.toml
[tool.pytest.ini_options]
pythonpath = [
	".",  # Add current directory
	"src", # Add a 'src' directory
]
